# tario

./: 2026-03-23-tario-improvements.md  AGENTS.md  CONTRIBUTING.md  LEARNING_AND_SHARING.md  README.md  pyproject.toml
docs/adr/: 0001-separate-tool-boundary.md  0002-stable-json-envelope.md  0003-config-is-source-of-truth.md  0004-artifact-layout.md  0005-documentation-language.md  0006-no-customer-or-environment-specifics.md  0007-env-prune-command.md  0008-extended-doctor-checks.md
src/tario/: cli.py  config.py  output.py  runner.py  schema.py
tests/: test_config.py  test_schema.py
