[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tario"
version = "0.1.0"
description = "Agent-friendly Docker Compose test runner for Odoo addon projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.16.1",
]

[project.urls]
Homepage = "https://github.com/lxkrmr/tario"
Repository = "https://github.com/lxkrmr/tario"
Issues = "https://github.com/lxkrmr/tario/issues"

[project.scripts]
tario = "tario:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.13.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
